# grapheinstein

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
.specify/: feature.json
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: agent-integration.md
specs/001-cli-project-index/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digraph-index-visualize/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tree-sitter-parsers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-docs-pdf-parsers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-media-parsers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-ollama-llm-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-graph-output-merge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-explain-concept/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-path-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-hybrid-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-config-cache-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-serve-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-contribution-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-large-repo-guards/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/grapheinstein/: __init__.py  __main__.py  api.py  cli.py  utils.py
tests/contract/: test_agent_docs.py  test_cli_explain.py  test_cli_help.py  test_cli_index_guards.py  test_cli_init.py  test_cli_merge.py  test_cli_path.py  test_cli_query.py  test_cli_serve.py  test_contributing_docs.py  test_graph_json.py  test_graph_json_completeness.py  test_graph_json_v2.py  test_graph_json_v3.py  test_graph_json_v4.py  test_graph_json_v5.py  test_graph_json_v6.py  test_http_api.py  test_python_api.py
tests/fixtures/: old_schema_v1_graph.json  old_schema_v2_graph.json  old_schema_v3_graph.json  old_schema_v4_graph.json  old_schema_v5_graph.json
tests/integration/: test_api_parity.py  test_cli_compress.py  test_cli_config.py  test_cli_config_cache.py  test_cli_explain_cmd.py  test_cli_include_flags.py  test_cli_index.py  test_cli_index_code.py  test_cli_index_docs.py  test_cli_index_llm_enrich.py  test_cli_index_llm_pipeline.py  test_cli_index_llm_skip.py  test_cli_index_media_av.py  test_cli_index_media_link.py  test_cli_index_media_ocr.py  test_cli_index_partial.py  test_cli_index_pdfs.py  test_cli_index_v2.py  test_cli_init_cmd.py  test_cli_languages.py  test_cli_large_repo_guards.py  test_cli_media_extras_missing.py  test_cli_merge_cmd.py  test_cli_path_cmd.py  test_cli_query_cmd.py  test_cli_status.py  test_cli_transcribe_media_flag.py  test_cli_versioned.py  test_cli_visualize.py  test_serve_roundtrip.py
tests/unit/: test_api_wrappers.py  test_cache.py  test_config.py  test_docs_extract.py  test_explain_neighborhood.py  test_explain_summary.py  test_extract_errors.py  test_extract_go.py  test_extract_python.py  test_graph_gzip.py  (+37 more)
(+310 files in other folders)
