[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grapheinstein"
version = "0.1.0"
description = "Local-first project knowledge graph CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "networkx>=3.2",
  "pathspec>=0.12",
  "rich>=13.7",
  "loguru>=0.7",
  "pyyaml>=6.0",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-rust>=0.23",
  "tree-sitter-cpp>=0.23",
  "tree-sitter-sql>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
grapheinstein = "grapheinstein.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
