[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grapheinstein"
version = "0.2.0"
description = "Local-first project knowledge graph CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Joe Zanini", email = "jozanini@users.noreply.github.com" },
]
keywords = [
  "cli",
  "knowledge-graph",
  "code-analysis",
  "local-first",
  "offline",
  "tree-sitter",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "networkx>=3.2",
  "pathspec>=0.12",
  "rich>=13.7",
  "loguru>=0.7",
  "pyyaml>=6.0",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-rust>=0.23",
  "tree-sitter-cpp>=0.23",
  "tree-sitter-sql>=0.3",
  "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.8"]
media = [
  "pytesseract>=0.3.10",
  "Pillow>=10.0",
  "faster-whisper>=1.0",
]
serve = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
grapheinstein = "grapheinstein.cli:app"

[project.urls]
Homepage = "https://github.com/Joezanini/grapheinstein"
Repository = "https://github.com/Joezanini/grapheinstein"
Issues = "https://github.com/Joezanini/grapheinstein/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "tests/fixtures",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = [
  "E501",  # line length: keep readable long strings/CLI help without noisy failures
  "B008",  # function calls in defaults (Typer / FastAPI patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "B017",  # pytest.raises(Exception) used intentionally in a few contracts
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
